# Dirac-Equation-Solver

./: .gitignore  AbsorbingBoundary_8h.html  AbsorbingBoundary_8h.js  AbsorbingBoundary_8h__dep__incl.map  AbsorbingBoundary_8h__dep__incl.md5  AbsorbingBoundary_8h__incl.map  AbsorbingBoundary_8h__incl.md5  AbsorbingBoundary_8h_source.html  Actualizaci_xC3_xB3n__constants_8md.html  BoundaryCondition_8h.html  BoundaryCondition_8h__dep__incl.map  BoundaryCondition_8h__dep__incl.md5  BoundaryCondition_8h__incl.map  BoundaryCondition_8h__incl.md5  BoundaryCondition_8h_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeLists_8txt.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  CoulombPotential_8h.html  CoulombPotential_8h_source.html  DiracMatrices_8h.html  DiracMatrices_8h.js  DiracMatrices_8h__incl.map  DiracMatrices_8h__incl.md5  DiracMatrices_8h_source.html  DiracMatrices_8py.html  DiracMatrices_8py.js  Doxyfile  FreeParticle_8h.html  FreeParticle_8h__dep__incl.map  FreeParticle_8h__incl.map  FreeParticle_8h_source.html  Grid_8h.html  Grid_8h__dep__incl.map  Grid_8h__dep__incl.md5  Grid_8h__incl.map  Grid_8h_source.html  (+292 more)
Desarrollo/html/: ____init_____8py.html  check__package_8py.html  files.html  md_dirac__solver_2README.html  pages.html
Desarrollo/html/search/: all_4.js  all_5.js
Desarrollo/latex/: dir_474bb8cf58f5f4c09a47ab7d6cc87500.tex  namespacedirac__solver.tex
Planing/: problems-to-solve.md
Structure/: Structure.md
cpp_build/: CMakeCache.txt
cpp_src/: CMakeLists.txt  DiracMatrices.h  Grid.h  TimeIntegrator.h  bindings.cpp
cpp_src/boundaries/: AbsorbingBoundary.h  BoundaryCondition.h  PeriodicBoundary.h
cpp_src/potentials/: CoulombPotential.h  FreeParticle.h  InfiniteWellPotential.h  Potential.h  ScalarPotential.h  YukawaPotential.h
dirac_solver/: .__init__.py.swp  DiracMatrices.h  DiracMatrices.py  README.md  Untitled.ipynb  __init__.py  check_package.py  constants.py  core.py  geometry.py  init_geometry.py  initial_state.py  observables.py  potentials.py  pyproject.toml  storage.py
dirac_solver/src/dirac_solver/: __init__.py  core.py  geometry.py  initial_state.py
dirac_solver/src/dirac_solver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/html/: AbsorbingBoundary_8h.html  AbsorbingBoundary_8h__incl.map  Actualizaci_xC3_xB3n__constants_8md.html  BoundaryCondition_8h.html  BoundaryCondition_8h.js  BoundaryCondition_8h__incl.md5  CMakeLists_8txt.html  CoulombPotential_8h.html  CoulombPotential_8h.js  CoulombPotential_8h__dep__incl.map  CoulombPotential_8h__dep__incl.md5  CoulombPotential_8h__incl.map  CoulombPotential_8h__incl.md5  CoulombPotential_8h_source.html  DiracMatrices_8h.js  DiracMatrices_8h__dep__incl.map  DiracMatrices_8h__dep__incl.md5  DiracMatrices_8h__incl.map  DiracMatrices_8h__incl.md5  DiracMatrices_8h_source.html  FreeParticle_8h.js  FreeParticle_8h__dep__incl.md5  FreeParticle_8h__incl.md5  Grid_8h.html  Grid_8h__dep__incl.map  Grid_8h__incl.md5  Grid_8h_source.html  PeriodicBoundary_8h.html  PeriodicBoundary_8h.js  PeriodicBoundary_8h__dep__incl.map  PeriodicBoundary_8h__dep__incl.md5  PeriodicBoundary_8h__incl.map  PeriodicBoundary_8h_source.html  Potential_8h.html  Potential_8h.js  Potential_8h__dep__incl.map  Potential_8h__dep__incl.md5  Potential_8h__incl.map  Potential_8h_source.html  README_8md.html  (+190 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  (+80 more)
docs/latex/: AbsorbingBoundary_8h.tex  AbsorbingBoundary_8h__dep__incl.md5  AbsorbingBoundary_8h__incl.md5  AbsorbingBoundary_8h_source.tex  Actualizaci_xC3_xB3n__constants_8md.tex  BoundaryCondition_8h.tex  BoundaryCondition_8h__dep__incl.md5  BoundaryCondition_8h__incl.md5  BoundaryCondition_8h_source.tex  CMakeLists_8txt.tex  CoulombPotential_8h.tex  CoulombPotential_8h__dep__incl.md5  CoulombPotential_8h__incl.md5  CoulombPotential_8h_source.tex  DiracMatrices_8h.tex  DiracMatrices_8h__dep__incl.md5  DiracMatrices_8h__incl.md5  DiracMatrices_8h_source.tex  FreeParticle_8h.tex  FreeParticle_8h__dep__incl.md5  FreeParticle_8h__incl.md5  FreeParticle_8h_source.tex  Grid_8h.tex  Grid_8h__dep__incl.md5  Grid_8h__incl.md5  Grid_8h_source.tex  Makefile  PeriodicBoundary_8h.tex  PeriodicBoundary_8h__dep__incl.md5  PeriodicBoundary_8h__incl.md5  PeriodicBoundary_8h_source.tex  Potential_8h.tex  Potential_8h__dep__incl.md5  Potential_8h__incl.md5  Potential_8h_source.tex  README_8md.tex  SOURCES_8txt.tex  ScalarPotential_8h.tex  ScalarPotential_8h__dep__incl.md5  ScalarPotential_8h__incl.md5  (+114 more)
examples/: 2D_and_3D_visualization.ipynb  3D_initial-state.ipynb  Geometry_test.ipynb  coulomb.ipynb  different_initial_state.ipynb  dirac_solver_1d_example.ipynb  extended_features_test.ipynb  free-particle-1D.ipynb  free-particle.ipynb  free-particle_nuevo.ipynb  observables_and_animation.ipynb  storage-data.ipynb  temp_2d_simulation.hdf5  well.ipynb  yukawa.ipynb
examples/.ipynb_checkpoints/: Geometry_test-checkpoint.ipynb  free-particle-1D-checkpoint.ipynb
examples/gaussian/: 1D_2D_and_3D_visualizationGaussian.ipynb
examples/legacy/: 3D_initial-state.ipynb  Constants_test.ipynb  Geometry_test.ipynb  physics_verification.ipynb
examples/plane wave/: 1D_2D_and_3D_planewavevisualization.ipynb
planning/: Actualización_constants.md  design-pattern.md  requirements-engineering.md  spinor-definition.md  structure.md  ulm-diagrams.md
save_data/: 2025-11-10_10-14-01.hdf5  2025-11-10_10-20-14.hdf5  2025-11-10_10-23-46.hdf5
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_22.js  all_23.js  all_24.js  all_25.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  (+64 more)
tests/: test_integration.py  test_physics.py  test_potentials.py
(+1 files in other folders)
