[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac-solver"
version = "0.0.1"
authors = [
  { name = "Sebastian Rodriguez Garcia", email = "sebrodriguezg@udistrital.edu.co" },
  { name = "Julian Leonardo Avila Martinez", email = "jlavilam@udistrital.edu.co" },
  { name = "Camilo Andres Huertas Archila", email = "cahuertasa@udistrital.edu.co" }
]
description = "Librería de ejemplo para iniciar un solver de Dirac"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
	"matplotlib",
	"numpy"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs","examples","planning"]

[project.urls]
Homepage = "https://github.com/Julian-L-Avila-M/Dirac-Equation-Solver/tree/main"
