[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dirac-solver"
version = "0.0.1"
authors = [
  { name = "Sebastisn Rodriguez Garcia", email = "sebrodriguezg@udistrital.edu.co" },
  { name = "Julian Leonardo Avila Martinez", email = "jlavila@udistrital.edu.co" },
  { name = "Camilo Andres Huertas Archila", email = "cahuertasa@udistrital.edu.co" }
]
description = "Librería de ejemplo para iniciar un solver de Dirac"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/tuusuario/dirac-solver"
